--- a/src/xEasyApp.Web/Views/SysManage/RoleInfoList.cshtml
+++ b/src/xEasyApp.Web/Views/SysManage/RoleInfoList.cshtml
@@ -10,13 +10,7 @@
 <body>
 
     <div class="MainContainer" style="margin: 0px 2px;">       
-       <table id="RoleInfoList" style="display:none;</table>
-         <div class="ajaxmsgpanel">
-               <div id="loadingpannel" class="ptogtitle loadicon" style="display: none;">
-            正在保存数据...</div>
-        <div id="errorpannel" class="ptogtitle loaderror" style="display: none;">
-            非常抱歉，无法执行您的操作，请稍后再试</div>
-        </div>
+       <table id="RoleInfoList" style="display:none;"></table>       
     </div>
    
     @Html.Js("jquery", "common", "easydrag", "flexigrid", "contextmenu", "dailog", "alert")
