--- a/src/xEasyApp.Web/Themes/Default/form.css
+++ b/src/xEasyApp.Web/Themes/Default/form.css
@@ -7,7 +7,7 @@
 }
 body
 {
-    background:#F0f8E4
+ 
 }
 .buttonpanel
 {
@@ -117,6 +117,14 @@ input[type='text']
 {
 	border: solid 1px #999;
 	height: 18px;
+	padding:2px 3px;
+	background:#fff url("../../images/bgs/text-bg.gif") repeat-x left top;
+}
+input.readonly
+{
+    border: solid 1px #ccc;
+    /*background:#f4f4f4;*/
+    color:#999;
 }
 input[type='checkbox']
 {
@@ -151,8 +159,7 @@ html > body .ellipsis
 .mainpanel
 {
     padding:5px;
-    border:1px solid #CCC;
-    background:#fff;
+ 
 }
 .mainpanel label
 {
@@ -185,7 +192,8 @@ label.error
 }
 input.error, select.error, textarea.error, input.cusErrorPanel, cusErrorPanel.cusErrorPanel, textarea.cusErrorPanel
 {
-	border: solid 1px red;
+	border: solid 1px #c30;
+	background:url("../../images/bgs/invalid_line.gif") repeat-x left bottom;
 }
 label.checked
 {
@@ -194,9 +202,7 @@ label.checked
 	padding: 0px 0 0px 18px;
 	background: url(images/validation/accept.png) no-repeat 2px center;
 }
-div.error
-{
-}
+
 
 div.cusErrorPanel
 {
@@ -211,8 +217,6 @@ div.cusErrorPanel
 	padding-left: 5px;
 	padding-right: 5px;
 	background: url(images/validation/tooltop2.gif) no-repeat left top;
-	opacity: 0.9;
-	filter: alpha(opacity=90);
 }
 div.cusError
 {
@@ -226,6 +230,4 @@ div.cusError
 	font-size: 12px;
 	font-family: Arial;
 	background: url(images/validation/tooltop.gif) no-repeat left top;
-	opacity: 0.9;
-	filter: alpha(opacity=90);
 }
