--- a/src/xEasyApp.Web/Views/Home/Index.cshtml
+++ b/src/xEasyApp.Web/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="x-panel-bwrap">
                 <div id="panel-wrap" class="x-panel-body">                    
-                    <div id="treepanel">
+                    <div id="treepanel" class="menutree">
                     <!--menu tree -->
                     </div>
                 </div>
