--- a/src/xEasyApp.Web/Themes/Default/flexigrid.css
+++ b/src/xEasyApp.Web/Themes/Default/flexigrid.css
@@ -132,7 +132,7 @@
 
 .bbit-grid div.mDiv
 {
-    background: url(images/flexigrid/headbg.gif) repeat-x top;
+    background: url(images/flexigrid/headbg.gif) repeat-x left -1px;
     border: 1px solid #99bbe8;
     border-top: 0px;
     font-weight: bold;
