--- a/src/xEasyApp.Web/Views/SysManage/DeptInfoList.cshtml
+++ b/src/xEasyApp.Web/Views/SysManage/DeptInfoList.cshtml
@@ -5,21 +5,49 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1">
     <title>角色列表</title>
-      @Html.Css("main", "flexigrid")
+    @Html.Css("main", "flexigrid","tree")
+    <style type="text/css">
+        .depttitle
+        {
+            color:#15428b;
+            font-weight:bold; 
+            background:url("../../images/icons/grid.png") no-repeat 2px center;   
+            padding:2px 2px 2px 24px;
+            margin-left:5px;           
+            display:block;
+        }
+    </style>
 </head>
 <body>
 
-    <div class="MainContainer" style="margin: 0px 2px;">       
-       <table id="RoleInfoList" style="display:none;"></table>      
+    <div class="MainContainer" style="margin: 1px 0px 0xp 0px;overflow:hidden;">  
+      <table width="100%" cellpadding="0" cellspacing="0" class="tree_grid_panel_table">
+        <tbody>
+            <tr>
+                <td style="width:170px;">
+                    <div class="toolbar"><span class="depttitle" >部门管理</span></div>
+                    <div id="depttree" style="border-right:#99bbe8 1px solid;border-bottom:#99bbe8 1px solid;"></div>
+                </td>
+                <td style="width:2px;">
+                </td>
+                <td>          
+                 <div id="deptheader" class="toolbar" style="border-left: #99bbe8 1px solid;"><span id="depttitle" class="depttitle">部门管理</span></div>      
+                 <table id="DepartmentList" style="display:none;"></table>      
+                </td>
+            </tr>
+        </tbody>
+       </table> 
+       <input type="hidden" value="-1" id="hdDeptid" />    
+       <input type="hidden" value="" id="hdDeptName" />
     </div>
    
-    @Html.Js("jquery", "common",  "flexigrid")   
+    @Html.Js("jquery", "common",  "flexigrid","tree")   
 
     <script type="text/javascript">
         $(document).ready(function () {
             var maiheight = document.documentElement.clientHeight;
-            var mainWidth = document.documentElement.clientWidth - 4; // 减去边框和左边的宽度
-            var otherpm = 55;
+            var mainWidth = document.documentElement.clientWidth - 3 - 170; // 减去边框和左边的宽度
+            var otherpm = 82;
             var gh = maiheight - otherpm;
             var option = {
                 height: gh,
@@ -27,10 +55,11 @@
                 url: '@Url.Action("DeptInfoList")',
                 colModel: [
                     { display: '部门代码', name: 'DeptCode', width: 60, sortable: false, align: 'left', iskey: true },
-			        { display: '部门名称', name: 'DeptName', width: 100, sortable: false, hide: false, align: 'left' },                  
-			        { display: '最后修改人', name: 'LastUpdateUserName', width: 80, sortable: false, align: 'left' },
-			        { display: '最后修改时间', name: 'LastUpdateTime', width: 150, sortable: false, align: 'left' },
-                    { display: '操作', name: 'DeptCode', width: 200, sortable: false, align: 'left', process: formatOp }
+			        { display: '部门名称', name: 'DeptName', width: 100, sortable: false, hide: false, align: 'left' },
+                    { display: '说明', name: 'Remark', width: 120, sortable: false, hide: false, align: 'left' },
+			        { display: '最后修改人', name: 'LastUpdateUserName', width: 80, sortable: false, hide: true, align: 'left' },
+			        { display: '最后修改时间', name: 'LastUpdateTime', width: 150, sortable: false, hide: true, align: 'left' },
+                    { display: '操作', name: 'DeptCode', width: 200, sortable: false, align: 'left', process: formatOp, toggle: false }
 				],
                 buttons: [
                             { name: 'Add', displayname: "新建", title: "新建部门", bclass: 'Add', onpress: toolbarItem_onclick },
@@ -44,7 +73,22 @@
                 rowbinddata: true
             };
 
-            var grid = $("#RoleInfoList").flexigrid(option);
+            $("#depttree").treeview({
+                url: '@Url.Action("DeptInfoTreeList")',
+                showcheck: false,
+                onnodeclick: TreeNode_Click,
+                theme: "bbit-tree-no-lines" //bbit-tree-lines ,bbit-tree-no-lines,bbit-tree-arrows
+            }).height(maiheight - 30);
+            function TreeNode_Click(data) {
+                var p = { extParam: [{ name: "parentCode", value: data.value}] };
+                $("#DepartmentList").flexOptions(p).flexReload();
+                $("#hdDeptid").val(data.value);
+                $("#hdDeptName").val(data.text);
+                $("#depttitle").text(data.text);
+                //data.expand();
+            } // end of TreeNode_Click
+
+            var grid = $("#DepartmentList").flexigrid(option);
 
             function fromIsSystem(value) {
                 if (value == 'True') {
@@ -59,17 +103,19 @@
                     a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:edit('", value, "')\"><span class='edit' title='编辑'>编辑</span></a>&nbsp;");
                     a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:del('", value, "','", cell[1], "')\"><span class='delete' title='删除'>删除</span></a>&nbsp;");
                 }
-                a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:edit('", value, "')\"><span class='setuser' title='查看角色用户'>查看用户</span></a>&nbsp;");  
+                a.push("<a class='imgbtn2' href=\"javascript:void(0);\" onclick=\"javascript:edit('", value, "')\"><span class='setuser' title='查看角色用户'>查看用户</span></a>&nbsp;");
                 return a.join("");
             }
             function toolbarItem_onclick(cmd, grid) {
                 if (cmd == "Add") {
-                    OpenModelWindow('@Url.Action("EditDept")', { width: 300, height: 170, caption: "新增部门", onclose: function () { showLoadingMsg("新增成功", { left: 300, top: 2 }, true, 3000); $("#RoleInfoList").flexReload(); } });
+                    var parentCode = $("#hdDeptid").val();
+                    var parentName = encodeURIComponent($("#hdDeptName").val());
+                    OpenModelWindow('@Url.Action("EditDept")?parentCode=' + parentCode + '&parentName=' + parentName, { width: 450, height: 370, caption: "新增部门", onclose: function () { showLoadingMsg("新增成功", { left: 300, top: 2 }, true, 3000); $("#DepartmentList").flexReload(); } });
                 }
             } // end of toolbarItem_onclick
 
 
-        });               // end of ready
+        });                     // end of ready
         function del(deptCode, deptName) {
             if (confirm("你确定要删除[" + deptName + "]?")) {
                 showLoadingMsg("正在删除...", { left: 300, top: 2 })
@@ -89,10 +135,10 @@
             }
         }
         function edit(deptCode) {
-            OpenModelWindow('@Url.Action("EditDept")/' + encodeURIComponent(deptCode), { width: 300, height: 170, caption: "修改部门信息", onclose: function () { showLoadingMsg("修改成功", { left: 300, top: 2 }, true, 3000); $("#RoleInfoList").flexReload(); } });
+            OpenModelWindow('@Url.Action("EditDept")/' + encodeURIComponent(deptCode), { width: 450, height: 370, caption: "修改部门信息", onclose: function () { showLoadingMsg("修改成功", { left: 300, top: 2 }, true, 3000); $("#DepartmentList").flexReload(); } });
         }
         function flushGrid() {
-            $("#RoleInfoList").flexReload(); //
+            $("#DepartmentList").flexReload(); //
         }
     </script>
 </body>
